[gd_scene load_steps=25 format=3 uid="uid://cfufrt7a0cruc"]

[ext_resource type="Script" uid="uid://cgayko6nfo5rq" path="res://scripts/warehouse_1.gd" id="1_wx1sp"]
[ext_resource type="Texture2D" uid="uid://wpbcu5ni4v05" path="res://assets/textures/debug/editor_grid.png" id="2_wu2bj"]
[ext_resource type="PackedScene" uid="uid://cotqedi4mq2rs" path="res://scenes/player.tscn" id="3_bnj7l"]
[ext_resource type="PackedScene" uid="uid://c8lkvpa6shb2o" path="res://assets/meshes/Debug/warehouse_1.glb" id="4_w06of"]
[ext_resource type="Script" uid="uid://d8wom6sgj4gw" path="res://scripts/stages/warehouse/elevator.gd" id="5_8yt6b"]
[ext_resource type="Script" uid="uid://c7ccd1128l7ea" path="res://addons/GodotDevTools/classes/nodes/modules/triggers/ActionPromptTrigger.gd" id="6_8yt6b"]
[ext_resource type="PackedScene" uid="uid://ckw76onrbjigi" path="res://assets/meshes/Misc/Racks/WareHouse-Rack-Hole-1.tscn" id="6_ipej6"]
[ext_resource type="PackedScene" uid="uid://cpucjcsixohb" path="res://assets/meshes/Misc/Racks/WareHouse-Rack-Low-1.tscn" id="7_8l4ym"]
[ext_resource type="Script" path="res://classes/nodes/modules/StageLauncher.gd" id="7_ikcrf"]
[ext_resource type="PackedScene" uid="uid://bdoi0xejcvx57" path="res://assets/meshes/Misc/Crates-Palets/Crate-1.tscn" id="8_qtl1u"]
[ext_resource type="PackedScene" uid="uid://ofpqhlh5dxxj" path="res://assets/meshes/Misc/Racks/WareHouse-Rack-Low-2.tscn" id="9_2g7c8"]
[ext_resource type="PackedScene" uid="uid://s1s7r0bew5gq" path="res://assets/meshes/Misc/Crates-Palets/palet_1.tscn" id="9_4aq6d"]
[ext_resource type="PackedScene" uid="uid://bq382ii6epxn4" path="res://assets/meshes/Misc/Crates-Palets/Crate-Lid-1.tscn" id="10_4aq6d"]
[ext_resource type="PackedScene" uid="uid://u27fvubvumgl" path="res://assets/meshes/Misc/ForkLifts/ForkLift-1.tscn" id="11_1jfds"]
[ext_resource type="PackedScene" uid="uid://d3xius20n1uk8" path="res://assets/meshes/Misc/Racks/WareHouse-Rack-1.tscn" id="12_2d1w7"]
[ext_resource type="PackedScene" uid="uid://cvciuh02hphg1" path="res://assets/meshes/Misc/lamp_hangend_plafond_1.tscn" id="16_70t0q"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fo0y1"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
energy_multiplier = 0.0

[sub_resource type="Sky" id="Sky_22f0a"]
sky_material = SubResource("ProceduralSkyMaterial_fo0y1")

[sub_resource type="Environment" id="Environment_dqy33"]
background_mode = 2
sky = SubResource("Sky_22f0a")
ambient_light_source = 2
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_2uw2f"]
size = Vector3(100, 0.497, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1o4kk"]
albedo_texture = ExtResource("2_wu2bj")
uv1_scale = Vector3(20, 20, 20)
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_0su6h"]
material = SubResource("StandardMaterial3D_1o4kk")
size = Vector2(100, 100)

[sub_resource type="BoxMesh" id="BoxMesh_wx1sp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vwg43"]
size = Vector3(6.0908203, 6.447693, 0.7508545)

[node name="Warehouse1" type="Node3D"]
script = ExtResource("1_wx1sp")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dqy33")

[node name="floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.7196975, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25170898, -43.194565)
shape = SubResource("BoxShape3D_2uw2f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -42.99329)
mesh = SubResource("PlaneMesh_0su6h")
skeleton = NodePath("../..")

[node name="player" parent="." instance=ExtResource("3_bnj7l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.3274956)

[node name="speaker" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.6939697, 4.36113, -7.282346)
mesh = SubResource("BoxMesh_wx1sp")

[node name="warehouse_1" parent="." instance=ExtResource("4_w06of")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.0018868446, 0.0063552856, -6.007277)

[node name="Node3D" type="Node3D" parent="warehouse_1"]

[node name="WareHouse-Rack-1" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3163913, -0.00044410676, -8.740904)

[node name="WareHouse-Rack-2" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3163913, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-3" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1836087, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-4" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1836087, -0.00044410676, -8.740904)

[node name="WareHouse-Rack-5" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.316392, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-7" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.816391, -0.00044410676, 1.2590961)

[node name="WareHouse-Rack-8" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.816391, -0.00044410676, -8.740904)

[node name="WareHouse-Rack-28" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, -8.740904)

[node name="WareHouse-Rack-29" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, -8.740904)

[node name="WareHouse-Rack-30" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, 1.2590961)

[node name="WareHouse-Rack-31" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-32" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, -28.740904)

[node name="WareHouse-Rack-33" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, -38.740906)

[node name="WareHouse-Rack-34" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, -48.740906)

[node name="WareHouse-Rack-35" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.683609, -0.00044410676, -58.740913)

[node name="WareHouse-Rack-15" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.816391, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-16" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.816391, -0.00044410676, -28.740904)

[node name="WareHouse-Rack-25" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.816391, -0.00044410676, -38.740906)

[node name="WareHouse-Rack-26" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.816391, -0.00044410676, -48.740906)

[node name="WareHouse-Rack-27" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.816391, -0.00044410676, -58.74092)

[node name="WareHouse-Rack-6" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.816391, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-9" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.683608, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-10" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.183608, -0.00044410676, -18.740904)

[node name="WareHouse-Rack-11" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.683608, -0.00044410676, -8.740904)

[node name="WareHouse-Rack-12" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.183608, -0.00044410676, -8.740904)

[node name="WareHouse-Rack-13" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.683608, -0.00044410676, -28.740904)

[node name="WareHouse-Rack-14" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.183608, -0.00044410676, -28.740904)

[node name="WareHouse-Rack-19" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3163918, -0.00044410676, -38.740906)

[node name="WareHouse-Rack-20" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1836082, -0.00044410676, -38.740906)

[node name="WareHouse-Rack-21" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.316392, -0.00044410676, -38.740906)

[node name="WareHouse-Rack-22" parent="warehouse_1/Node3D" instance=ExtResource("12_2d1w7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.816392, -0.00044410676, -38.740906)

[node name="Warehouse-Rack-Hole-1" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -11.371424, 0, -8.714485)

[node name="Warehouse-Rack-Hole-2" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(1, 0, -1.7484555e-07, 0, 1, 0, 1.7484555e-07, 0, 1, -8.871424, 0, -8.714485)

[node name="Warehouse-Rack-Hole-3" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(1, 0, -1.7484555e-07, 0, 1, 0, 1.7484555e-07, 0, 1, 8.628576, 0, -38.714485)

[node name="Warehouse-Rack-Hole-4" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 11.128576, 0, -38.714485)

[node name="Warehouse-Rack-Hole-5" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(1, 0, -1.7484555e-07, 0, 1, 0, 1.7484555e-07, 0, 1, 11.128576, 0, -48.714485)

[node name="Warehouse-Rack-Hole-8" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(1, 0, -1.7484555e-07, 0, 1, 0, 1.7484555e-07, 0, 1, -1.3714236, 0, -48.714485)

[node name="Warehouse-Rack-Hole-6" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 8.628576, 0, -48.714485)

[node name="Warehouse-Rack-Hole-7" parent="warehouse_1/Node3D" instance=ExtResource("6_ipej6")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 1.1285764, 0, -48.714485)

[node name="Warehouse-Rack-Low-1" parent="warehouse_1/Node3D" instance=ExtResource("7_8l4ym")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.326, 0, -28.7847)

[node name="Warehouse-Rack-Low-2" parent="warehouse_1/Node3D" instance=ExtResource("7_8l4ym")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.826, 0, -28.7847)

[node name="Warehouse-Rack-Low-3" parent="warehouse_1/Node3D" instance=ExtResource("7_8l4ym")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3260001, 0, -28.7847)

[node name="Warehouse-Rack-Low-4" parent="warehouse_1/Node3D" instance=ExtResource("7_8l4ym")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1739999, 0, -28.7847)

[node name="Warehouse-Rack-Low-5" parent="warehouse_1/Node3D" instance=ExtResource("9_2g7c8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.693133, 0, -48.68074)

[node name="Warehouse-Rack-Low-6" parent="warehouse_1/Node3D" instance=ExtResource("9_2g7c8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.193134, 0, -48.68074)

[node name="elevator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.355262, -64.50115)
script = ExtResource("5_8yt6b")

[node name="ActionPromptTrigger" type="Node3D" parent="elevator"]
script = ExtResource("6_8yt6b")
metadata/_custom_type_script = "uid://c7ccd1128l7ea"

[node name="Area3D" type="Area3D" parent="elevator/ActionPromptTrigger"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="elevator/ActionPromptTrigger/Area3D"]
shape = SubResource("BoxShape3D_vwg43")

[node name="large_doorway" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1511102, -58.99383)

[node name="StageLauncher" type="Node3D" parent="large_doorway"]
script = ExtResource("7_ikcrf")
stage_id = "warehouse/warehouse_2"

[node name="ActionPromptTrigger" type="Node3D" parent="large_doorway/StageLauncher"]
script = ExtResource("6_8yt6b")
enabled = false
metadata/_custom_type_script = "uid://c7ccd1128l7ea"

[node name="Area3D" type="Area3D" parent="large_doorway/StageLauncher/ActionPromptTrigger"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="large_doorway/StageLauncher/ActionPromptTrigger/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.033905, -0.124572754)
shape = SubResource("BoxShape3D_vwg43")

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -4.0907173, 10.6228895, -20.825703)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D4" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -12.012194, 10.6228895, -20.825703)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D5" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -4.0396137, 10.6228895, -28.798285)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D6" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 3.8471622, 10.6228895, -28.798285)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D7" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 12.040643, 10.6228895, -36.728874)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D8" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 12.040643, 10.6228895, -44.747097)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D9" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 3.8909779, 10.6228895, -44.747097)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D10" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -3.9519825, 10.6228895, -44.747097)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D11" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -12.057833, 10.6228895, -44.747097)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D13" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 12.040643, 10.6228895, -54.158314)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D14" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 3.8909779, 10.6228895, -54.158314)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D21" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5252934, 0.85092115, 0, -0.85092115, 0.5252934, 0.047897458, 10.6228895, -54.158314)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D15" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -3.9519825, 10.6228895, -54.158314)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D16" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -12.057833, 10.6228895, -54.158314)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D17" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 12.040643, 20.90469, -61.57707)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D18" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 3.8909779, 20.90469, -61.57707)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D19" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -3.9519825, 20.90469, -61.57707)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D20" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -12.057833, 20.90469, -61.57707)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D12" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -3.908167, 10.6228895, -35.63349)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -4.0907173, 10.6228895, -12.086527)
shadow_enabled = true
spot_range = 18.780334
spot_angle = 23.592535

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2984114, 14.537597, -30.339828)
light_energy = 0.3
light_size = 1.0
shadow_enabled = true
omni_range = 40.204826

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.12217367, 9.991356, -62.349182)
light_color = Color(1, 0.120000005, 0.120000005, 1)
light_energy = 0.3
light_size = 1.0
shadow_enabled = true
omni_range = 40.204826

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.7495575, 0.49547648, -38.781403)
light_energy = 0.3
light_size = 1.0
shadow_enabled = true
shadow_normal_bias = 2.188
shadow_blur = 0.0
omni_range = 12.528

[node name="Crate-1" parent="." instance=ExtResource("8_qtl1u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.436082, 0.022139728, -2.9802718)

[node name="Palet-1" parent="." instance=ExtResource("9_4aq6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.0440054, 0.009669844, -2.2543375)

[node name="Crate-Lid-1" parent="." instance=ExtResource("10_4aq6d")]
transform = Transform3D(0.905983, 0, 0.42331412, 0, 1, 0, -0.42331412, 0, 0.905983, -12.422538, 2.0385823, -3.0068583)

[node name="Crate-Lid-2" parent="." instance=ExtResource("10_4aq6d")]
transform = Transform3D(1.6202683, 0, 0.17784885, 0, 1.63, 0, -0.17784885, 0, 1.6202683, -4.06915, 3.2327573, -26.006859)

[node name="ForkLift-1" parent="." instance=ExtResource("11_1jfds")]
transform = Transform3D(0.7445446, 0, -0.66757274, 0, 1, 0, 0.66757274, 0, 0.7445446, -12.309879, 0.011134505, -7.785687)

[node name="ForkLift-2" parent="." instance=ExtResource("11_1jfds")]
transform = Transform3D(-0.026857466, 0, -0.9996393, 0, 1, 0, 0.9996393, 0, -0.026857466, 3.695291, 0.011134505, -50.22516)

[node name="global_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.82864, 0.55939037, -0.020941058, -0.2387473, 0.387004, 0.8906335, 0.50631595, -0.73301464, 0.45423967, 0, 0, 0)
light_energy = 0.11
shadow_enabled = true
shadow_opacity = 0.84

[node name="Crate-2" parent="." instance=ExtResource("8_qtl1u")]
transform = Transform3D(1.62, 0, 0, 0, 1.62, 0, 0, 0, 1.62, -4.13723, 0.02849549, -26.129477)

[node name="Lamp-Hangend-Plafond-1" parent="." instance=ExtResource("16_70t0q")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -7.9499784, 17.076141, -11.482518)
